feat: aktualizacja logo, zmieniona kolorystyka na białą

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 :root {
-    --background: #000000;
-    --foreground: #ffffff;
+    --background: #ffffff;
+    --foreground: #000000;
 }
 
 @theme inline {
